--- a/index.html
+++ b/index.html
@@ -24,23 +24,110 @@
                 <img src="img/eu.jpg" alt="Foto">
                 <h1>Lucas Eduardo Gomes</h1>
             </div>
-            <div class="pessoais">
+            <div class="pessoais" id="pessoais">
                 <ul>
-                    <li><i class='bx bxs-briefcase' style='color:#180a01'  ></i> Programação e Design </li>
-                    <li><i class='bx bxs-map' style='color:#ff0000'  ></i> Barra Bonita, SP</li>
-                    <li><i class='bx bxl-gmail' style='color:#ff3e3e'  ></i> lucaseduardog48@gmail.com</li>
-                    <li><i class='bx bxl-whatsapp-square' style='color:#00ff41' ></i> (14) 98816-7125</li>
-                    <li><i class='bx bxl-discord' style='color:#0067ff'  ></i> lucas23s</li>
-                    <li><i class='bx bxl-github' undefined ></i> Lucas23s</li>
+                    <li><i class='bx bxs-briefcase'></i> Programação e Design </li>
+                    <li><i class='bx bxs-map'></i> Barra Bonita, SP</li>
+                    <li><i class='bx bxl-gmail'></i> lucaseduardog48@gmail.com</li>
+                    <li><i class='bx bxl-whatsapp'></i> (14) 98816-7125</li>
+                </ul>
+            </div>
+            <hr>
+            <div class="habilidades">
+                <h3><i class='bx bx-list-check'></i> Habilidades</h3>
+                <ul>
+                    <li>
+                        <p>Edição de vídeos</p>
+                        <progress max="100" value="90"></progress>
+                    </li>
+                    <li>
+                        <p>Canva design</p>
+                        <progress max="100" value="99"></progress>
+                    </li>
+                    <li>
+                        <p>HTML/CSS</p>
+                        <progress max="100" value="90"></progress>
+                    </li>
+                    <li>
+                        <p>Lógica de programação</p>
+                        <progress max="100" value="90"></progress>
+                    </li>
+                    <li>
+                        <p>Trabalho em equipe</p>
+                        <progress max="100" value="98"></progress>
+                    </li>
+                    <li>
+                        <p>Comprometimento</p>
+                        <progress max="100" value="99"></progress>
+                    </li>
+                    <li>
+                        <p>Responsabilidade</p>
+                        <progress max="100" value="99"></progress>
+                    </li>
+                </ul>
+            </div>
+            <hr>
+            <div class="idiomas">
+                <h3><i class='bx bx-world' undefined></i> Idiomas</h3>
+                <ul>
+                    <li>
+                        <p>Português</p>
+                        <progress max="100" value="100"></progress>
+                    </li>
+                    <li>
+                        <p>Inglês</p>
+                        <progress max="100" value="55"></progress>
+                    </li>
+                    <li>
+                        <p>Espanhol</p>
+                        <progress max="100" value="65"></progress>
+                    </li>
                 </ul>
             </div>
         </section>
         <section class="right">
-
+            <div class="experiencias">
+                <h2><i class='bx bxs-bookmark-star'></i> Experiências</h2>
+                <div class="trabalho">
+                    <p class="nome-trabalho">
+                        Canva design
+                    </p>
+                    <p class="data"><i class='bx bxs-calendar'></i>
+                        Fev 2023 - <span class="atual">Atual</span>
+                    </p>
+                    <p class="nome-trabalho">
+                        Edição de vídeo
+                    </p>
+                    <p class="data"><i class='bx bxs-calendar'></i>
+                        Mar 2022 - <span class="atual">Atual</span>
+                    </p>
+                </div>
+            </div>
+            <div class="educacao">
+                <h2><i class='bx bxs-graduation'></i> Formação Acadêmica</h2>
+                <div class="curso">
+                    <p class="nome-curso">
+                        Ativa Juventude - Fundação Raízen
+                    </p>
+                    <p class="data"><i class='bx bxs-calendar'></i>
+                        Mar 2022 - Nov 2022
+                    </p>
+                    <p class="nome-trabalho">
+                        Barracred Conecta
+                    </p>
+                    <p class="data"><i class='bx bxs-calendar'></i>
+                        Ago 2024 - <span class="atual">Atual</span>
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-
+        <p>Siga-me nas Redes Sociais</p>
+        <a href="https://github.com/Lucas23s" target="_blank" title="GitHub">
+            <i class='bx bxl-github' undefined></i>
+        </a>
+        <p>Todos os direitos reservados 2024</p>
     </footer>
 
 </body>
